[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemySpawner.gd" type="Script" id=1]

[node name="enemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="EnemyContainer" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="Timer4" type="Timer" parent="."]

